--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  // teste
   <h2>Home</h2>
   <p>Login realizado com sucesso.</p>
   <button (click)="logout()">Sair</button>
