tela reset-password

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -34,7 +34,7 @@
           />
           <span class="trailing-icon" aria-hidden="true">👁️</span>
         </div>
-        <a class="recover" href="#">Recuperar Senha?</a>
+        <a class="recover" routerLink="/esqueci-senha">Recuperar Senha?</a>
       </div>
 
       <button class="primary" type="submit" [disabled]="form.invalid || loading">
