workflow roda automaticament

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -17,7 +17,7 @@
             id="username"
             type="text"
             formControlName="username"
-            placeholder="nome@empresa.com.br"
+            placeholder="Usuário"
           />
         </div>
       </div>
