--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,8 +1,6 @@
 <div class="login-page">
   <div class="brand">
-    <div class="brand-icon">
-      <span>💼</span>
-    </div>
+    <img src="assets/logo.svg" alt="Logo" class="brand-svg" />
     <h1>Sistema Financeiro Inteligente</h1>
     <!-- <p class="subtitle">Gestão Financeira Inteligente</p> -->
   </div>
